--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -3,7 +3,7 @@ name: Update submodules
 on:
   push:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 12 * * *'
   workflow_dispatch:
 
 jobs:
