--- a/config.yml
+++ b/config.yml
@@ -21,7 +21,7 @@ outputs:
 
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    title: "zeroday0619's Programming Life"
+    title: "zeroday0619"
     description: "프로젝트 & 스터디 하면서 알게 된걸 정리하는 공간"
     keywords: ["컴퓨터 공학", "리눅스", "프로그래밍"]
     author: "zeroday0619"
@@ -50,7 +50,7 @@ params:
   
     # home-info mode
     homeInfoParams:
-        Title: "zeroday0619's Programming Life"
+        Title: "zeroday0619"
         Content: >
             *Welcome to my blog in zeroday0619's Programming Life*\
             
